@@ -19,11 +19,12 @@ import org.bukkit.Material;
 import org.bukkit.event.Event;
 import org.bukkit.inventory.meta.BookMeta;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 import org.skriptlang.skript.registration.SyntaxInfo;
 import org.skriptlang.skript.registration.SyntaxRegistry;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 
 @Name("Book Pages")
@@ -44,7 +45,7 @@ public class ExprBookPages extends SimpleExpression<Component> {
 	@SuppressWarnings("ConstantValue") // true on 26.1 and older
 	private static final boolean EXTENDS_ADVENTURE_BOOK = Book.class.isAssignableFrom(BookMeta.class);
 
-	public static List<Component> getPages(BookMeta bookMeta) {
+	public static @Unmodifiable List<Component> getPages(BookMeta bookMeta) {
 		if (EXTENDS_ADVENTURE_BOOK) {
 			//noinspection ConstantConditions
 			return ((Book) (Object) bookMeta).pages();
@@ -125,14 +126,17 @@ public class ExprBookPages extends SimpleExpression<Component> {
 
 	@Override
 	public void change(Event event, Object @Nullable [] delta, ChangeMode mode) {
-		int pageNumber = isAllPages() ? -1 : this.pageNumber.getOptionalSingle(event).orElse(-1);
-		List<Component> newPages = delta == null ? Collections.emptyList() : new ArrayList<>(delta.length);
+		int pageNumber = -1;
+		if (!isAllPages()) {
+			pageNumber = this.pageNumber.getOptionalSingle(event).orElse(-1);
+			if (pageNumber <= 0) {
+				return;
+			}
+		}
+		List<Component> newPages = delta == null ? List.of() : new ArrayList<>(delta.length);
 		if (delta != null) {
 			for (Object page : delta) {
 				newPages.add((Component) page);
-			}
-			if (pageNumber != -1 && newPages.isEmpty()) { // not setting this page to anything, exit early
-				return;
 			}
 		}
 
@@ -149,13 +153,28 @@ public class ExprBookPages extends SimpleExpression<Component> {
 				}
 			} else {
 				switch (mode) {
-					case SET -> bookMeta.page(pageNumber, newPages.getFirst());
+					case SET -> {
+						if (pageNumber > bookMeta.getPageCount()) {
+							Component[] pages = new Component[pageNumber - bookMeta.getPageCount()];
+							Arrays.fill(pages, Component.empty());
+							bookMeta.addPages(pages);
+						}
+						bookMeta.page(pageNumber, newPages.getFirst());
+					}
 					case DELETE -> {
+						if (pageNumber > bookMeta.getPageCount()) {
+							break;
+						}
 						List<Component> pages = new ArrayList<>(getPages(bookMeta));
-						pages.remove(pageNumber);
+						pages.remove(pageNumber - 1);
 						setPages(bookMeta, pages);
 					}
-					case RESET -> bookMeta.page(pageNumber, Component.empty());
+					case RESET -> {
+						if (pageNumber > bookMeta.getPageCount()) {
+							continue;
+						}
+						bookMeta.page(pageNumber, Component.empty());
+					}
 					default -> throw new IllegalStateException();
 				}
 			}
